fdo#65650: fix Writer ODF import of list style with bullets and color

For such lists xmloff tries to set a BulletColor property but
SwXNumberingRules::SetNumberingRuleByIndex() throws a RuntimeException
and does not set any of the list properties on the NumRule.

(regression from abf18610998aa8330f8330f1d769508e47ef5b20)

Change-Id: Id3e80ee1ed67497786258a1096bc5c8dec90ce21
(cherry picked from commit 0520eaf9e661abddadf9a21cfbeab37b0b85dd68)
Reviewed-on: https://gerrit.libreoffice.org/4664
Reviewed-by: Fridrich Strba <fridrich@documentfoundation.org>
Tested-by: Fridrich Strba <fridrich@documentfoundation.org>